--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <a href="#page-top" class="waves-effect">Hello</a>
               </li>
               <li>
-                <a href="#page-top" class="waves-effect">Education</a>
+                <a href="#education" class="waves-effect">Education</a>
               </li>
               <li>
                 <a href="#works" class="waves-effect">Work Experience</a>
@@ -245,120 +245,72 @@
           <!-- Skill Item -->
           <div class="skill-item"> <img src="images/Skills/adobe_indesign.png" class="circle" alt="Adobe InDesign">
             <div class="title_value">Adobe InDesign
-              <span class="value">80%</span>
-            </div>
-            <div class="progress">
-              <div class="determinate pink darken-4" style="width: 80%;"></div>
             </div>
           </div>
           <!-- # Skill Item End # -->
           <!-- Skill Item -->
           <div class="skill-item"> <img src="images/Skills/adobe_photoshop.png" class="circle" alt="Adobe Photoshop">
             <div class="title_value">Adobe Photoshop
-              <span class="value">90%</span>
-            </div>
-            <div class="progress">
-              <div class="determinate blue darken-3" style="width: 90%;"></div>
             </div>
           </div>
           <!-- # Skill Item End # -->
           <!-- Skill Item -->
           <div class="skill-item"> <img src="images/Skills/adobe_illustrator.png" class="circle" alt="Adobe Illustrator">
             <div class="title_value">Adobe Illustrator
-              <span class="value">90%</span>
-            </div>
-            <div class="progress">
-              <div class="determinate amber darken-4" style="width: 90%;"></div>
             </div>
           </div>
           <!-- # Skill Item End # -->
           <!-- Skill Item -->
           <div class="skill-item"> <img src="images/Skills/microsoft_office.png" class="circle" alt="Microsoft Office">
             <div class="title_value">Microsoft Office
-              <span class="value">100%</span>
-            </div>
-            <div class="progress">
-              <div class="determinate red darken-4" style="width: 100%;"></div>
             </div>
           </div>
           <!-- # Skill Item End # -->
           <!-- Skill Item -->
           <div class="skill-item"> <img src="images/Skills/html_logo.png" class="circle" alt="HTML 5">
             <div class="title_value">HTML 5
-              <span class="value">100%</span>
-            </div>
-            <div class="progress">
-              <div class="determinate pink darken-4" style="width: 100%;"></div>
             </div>
           </div>
           <!-- # Skill Item End # -->
           <!-- Skill Item -->
           <div class="skill-item"> <img src="images/Skills/css_logo.png" class="circle" alt="CSS">
             <div class="title_value">CSS
-              <span class="value">100%</span>
-            </div>
-            <div class="progress">
-              <div class="determinate blue darken-3" style="width: 100%;"></div>
             </div>
           </div>
           <!-- # Skill Item End # -->
           <!-- Skill Item -->
           <div class="skill-item"> <img src="images/Skills/javascript_logo.png" class="circle" alt="Javascript">
             <div class="title_value">Javascript
-              <span class="value">100%</span>
-            </div>
-            <div class="progress">
-              <div class="determinate amber darken-4" style="width: 100%;"></div>
             </div>
           </div>
           <!-- # Skill Item End # -->
           <!-- Skill Item -->
           <div class="skill-item"> <img src="images/Skills/jquery_logo.png" class="circle" alt="jQuery">
             <div class="title_value">jQuery
-              <span class="value">100%</span>
-            </div>
-            <div class="progress">
-              <div class="determinate red darken-4" style="width: 100%;"></div>
             </div>
           </div>
           <!-- # Skill Item End # -->
             <!-- Skill Item -->
           <div class="skill-item"> <img src="images/Skills/php_logo.png" class="circle" alt="PHP">
             <div class="title_value">PHP
-              <span class="value">100%</span>
-            </div>
-            <div class="progress">
-              <div class="determinate pink darken-4" style="width: 100%;"></div>
             </div>
           </div>
           <!-- # Skill Item End # -->
           <!-- Skill Item -->
           <div class="skill-item"> <img src="images/Skills/angular_js_logo.png" class="circle" alt="AngularJs">
             <div class="title_value">AngularJS
-              <span class="value">50%</span>
-            </div>
-            <div class="progress">
-              <div class="determinate blue darken-3" style="width: 50%;"></div>
             </div>
           </div>
           <!-- # Skill Item End # -->
           <!-- Skill Item -->
           <div class="skill-item"> <img src="images/Skills/drupal_logo.png" class="circle" alt="Drupal">
             <div class="title_value">Drupal
-              <span class="value">70%</span>
-            </div>
-            <div class="progress">
-              <div class="determinate amber darken-4" style="width: 70%;"></div>
             </div>
           </div>
           <!-- # Skill Item End # -->
           <!-- Skill Item -->
           <div class="skill-item"> <img src="images/Skills/wordpress_logo.png" class="circle" alt="jQuery">
             <div class="title_value">Wordpress
-              <span class="value">100%</span>
-            </div>
-            <div class="progress">
-              <div class="determinate red darken-4" style="width: 100%;"></div>
             </div>
           </div>
           <!-- # Skill Item End # -->
