--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <link type="text/css" rel="stylesheet" href="assets/css/responsive.css" />
   <!-- Theme -->
   <link type="text/css" rel="stylesheet" href="assets/themes/color6/color-style/color.css" id="switch_style" />
+
 </head>
 
 <body id="page-top" class="scrollspy">
@@ -226,8 +227,8 @@
               <td class="col3">ArtistCheer.com & MiracletheComedian.com
                 <span class="light-green-text text-darken-3"></span>
               </td>
-              <td class="col4">2016 & 2017</td>
-            </tr>  
+              <td class="col4">2016 - Present</td>
+            </tr>
           </tbody>
           <!-- # Table End # -->
         </table>
@@ -388,9 +389,9 @@
 
         <div id="Portfolio_Carousel">
           <div class="portfolio-item">
-              <h6>gameShop</h6>
-              <a href="http://lowcost-env.j9kz4cmw7w.us-east-2.elasticbeanstalk.com/" target="_blank"><img src="images/Portfolio/gameShop.png"/></a>
-              <p>A shopping site built for purchasing video games, using the CodeIgniter framework.</p>
+              <h6>JobFinder</h6>
+              <a href="https://safe-reaches-41821.herokuapp.com/" target="_blank"><img src="images/Portfolio/JobFinder.png"/></a>
+              <p>A job finding site built for seeking out jobs, and posting jobs for potential employees. Built using Cakephp and deployed through heroku.</p>
           </div>
           <div class="portfolio-item">
               <h6>Chranslate</h6>
@@ -402,6 +403,11 @@
             <h6>Miracle the Comedian</h6>
             <a href="http://miraclethecomedian.com/"><img src="images/Portfolio/miracle_the_comedian.png"/></a>
             <p>Orlando Comedian, Miracle. Developed using Wordpress.</p>
+          </div>
+          <div class="portfolio-item">
+              <h6>scrollSite</h6>
+              <a href="https://desolate-plains-19599.herokuapp.com/index.html" target="_blank"><img src="images/Portfolio/scrollSite.png"/></a>
+              <p>A simple site used to showcase some scrolling animations to make a site look more stylistic and visually appealing.</p>
           </div>
         </div>
 
@@ -482,7 +488,7 @@
       <footer id="footer">
         <div class="copyright">
           <div class="row">
-            <div class="col s12 m6 l6 left light-bg">bdemaio.com
+            <div class="col s12 m6 l6 left light-bg">demaiodesign.com
               <br> 2016 - Copyright</div>
             <div class="col s12 m6 l6 right dark-bg">Contact Me!
               <br> bdemaio1@gmail.com
